# satisfactory-monitoring

./: README.md  setup.cfg
satisfactory_monitoring/: __init__.py  __main__.py
satisfactory_monitoring/alert_actions/: discord_alert_action.py  log_alert_action.py
satisfactory_monitoring/alert_processors/: idle_alert_processor.py
satisfactory_monitoring/conditions/: regex_condition.py
satisfactory_monitoring/line_processor/: alerting_line_processor.py  logging_line_processor.py
satisfactory_monitoring/line_processor/alerting/: regex_rule.py
satisfactory_monitoring/log_monitor/: file_monitor.py
