[metadata]
name = satisfactory_monitoring
version = attr:satisfactory_monitoring.__VERSION__
description = A process for monitoring the logs of Satisfactory, by Coffee Stain Studios, and sending alerts whenever certain conditions arise that may break multiplayer sessions
long_description = file: README.md
keywords = satisfactory, FactoryGame
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
entry_points = satisfactory_monitoring
packages = satisfactory_monitoring
install_requires =
    watchdog ~= 1.0.2